fix nav icon aligment on mobile

--- a/src/core/components/Nav/Nav.module.scss
+++ b/src/core/components/Nav/Nav.module.scss
@@ -7,5 +7,4 @@
 .nav__logo {
   width: 40px;
   height: 40px;
-  justify-self: flex-start;
 }
